--- a/ss/components/_social.scss
+++ b/ss/components/_social.scss
@@ -6,7 +6,7 @@
         font-size: em(24px);
         @include transition(200ms);
 	    
-	    $social-colors: #2ecc71 #8b9dc3 #3CF3CF #333332;
+	    $social-colors: #388E3C #3b5998 #55acee #555;
 
 	    @for $index from 1 through length($social-colors) {
 	  		$color: nth($social-colors, $index);
